// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Start snapshot renders correctly 1`] = `
Array [
  <h1>
    Start your fostering journey
  </h1>,
  <ol
    className="task-item-list"
  >
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div
          className="task-item-heading"
        >
          <span
            className="status-completed"
          >
            Completed
          </span>
          <h2>
            Contact the fostering team
          </h2>
        </div>
        <p>
          Contact the fostering team to tell us that you’re interested in becoming a foster carer.
        </p>
        <hr />
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div
          className="task-item-heading"
        >
          <span
            className="status-completed"
          >
            Completed
          </span>
          <h2>
            Find out more about fostering
          </h2>
        </div>
        <p>
          Speak to the fostering team about your interest in fostering and arrange a home visit.
        </p>
        <hr />
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div
          className="task-item-heading"
        >
          <h2>
            Answer questions before your home visit
          </h2>
        </div>
        <p>
          You can answer the questions in this section to help you to prepare for your home visit. This step is optional however, your fostering journey can be made simpler by telling us more about yourself. You can make changes to your answers up to 30 minutes before your home visit and your social worker will be able to see your answers before your appointment.
        </p>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/known-by-another-name"
            onClick={[Function]}
          >
            Tell us more about you
          </a>
          <span
            className="status-completed"
          >
            Completed
          </span>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/are-you-employed"
            onClick={[Function]}
          >
            Your employment details
          </a>
          <span
            className="status-not-completed"
          >
            Not completed
          </span>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/languages-spoken-in-your-home"
            onClick={[Function]}
          >
            Tell us about the languages that are spoken in your home
          </a>
          <span
            className="status-completed"
          >
            Completed
          </span>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/your-partnership-status"
            onClick={[Function]}
          >
            Your partnership status
          </a>
          <span
            className="status-completed"
          >
            Completed
          </span>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/your-fostering-history"
            onClick={[Function]}
          >
            Your fostering history
          </a>
          <span
            className="status-not-completed"
          >
            Not completed
          </span>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/about-your-health"
            onClick={[Function]}
          >
            Your health
          </a>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/your-interest-in-fostering"
            onClick={[Function]}
          >
            Tell us about your interest in fostering
          </a>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/your-household"
            onClick={[Function]}
          >
            Your household
          </a>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/children-under-sixteen-living-away"
            onClick={[Function]}
          >
            Children living away from your home
          </a>
        </div>
      </div>
    </li>
    <li
      className="disabled"
    >
      <div
        className="task-item"
      >
        <div
          className="task-item-heading"
        >
          <h2>
            Home visit
          </h2>
        </div>
        <p>
          Your social worker will come to your home to find out more about you and your reasons for wanting to become a foster carer. If you’ve answered the questions in section 3, you’ll talk more about them. 
        </p>
        <hr />
      </div>
    </li>
    <li
      className="disabled"
    >
      <div
        className="task-item"
      >
        <div
          className="task-item-heading"
        >
          <span
            className="status-cant-start"
          >
            Can't start yet
          </span>
          <h2>
            Additional information
          </h2>
        </div>
        <p>
          After your home visit, you must give us more information so that we can carry out personal checks and contact your referees.
        </p>
        <div
          className="anchor-with-status"
        >
          <p>
            Address history
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your GP details
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Personal references
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Personal relationships with local councillors or council employees
          </p>
        </div>
      </div>
    </li>
    <li
      className="disabled"
    >
      <div
        className="task-item"
      >
        <div
          className="task-item-heading"
        >
          <h2>
            Next steps
          </h2>
        </div>
        <p>
          The fostering team will use the information that you’ve provided to carry out statutory checks and request personal and health references from your referees and GP.
        </p>
        <p>
          You’ll complete the assessment stage of your fostering journey where you’ll:
        </p>
        <ul>
          <li>
            attend training sessions, including the Skills to Foster course to help prepare you for becoming a foster carer
          </li>
          <li>
            have more meetings with your social worker so that they can find out more about you and your reasons for wanting to become a foster carer
          </li>
          <li>
            get to know current foster carers and other people who are starting their fostering journey
          </li>
        </ul>
        <p>
          You’ll then go to panel where a decision will be made about whether you can become a foster carer.
        </p>
      </div>
    </li>
  </ol>,
]
`;

exports[`Start snapshot renders correctly with home visit date 1`] = `
Array [
  <h1>
    Start your fostering journey
  </h1>,
  <ol
    className="task-item-list"
  >
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div
          className="task-item-heading"
        >
          <span
            className="status-completed"
          >
            Completed
          </span>
          <h2>
            Contact the fostering team
          </h2>
        </div>
        <p>
          Contact the fostering team to tell us that you’re interested in becoming a foster carer.
        </p>
        <hr />
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div
          className="task-item-heading"
        >
          <span
            className="status-completed"
          >
            Completed
          </span>
          <h2>
            Find out more about fostering
          </h2>
        </div>
        <p>
          Speak to the fostering team about your interest in fostering and arrange a home visit.
        </p>
        <hr />
      </div>
    </li>
    <li
      className={undefined}
    >
      <div
        className="task-item"
      >
        <div
          className="task-item-heading"
        >
          <h2>
            Answer questions before your home visit
          </h2>
        </div>
        <p>
          You can answer the questions in this section to help you to prepare for your home visit. This step is optional however, your fostering journey can be made simpler by telling us more about yourself. You can make changes to your answers up to 30 minutes before your home visit and your social worker will be able to see your answers before your appointment.
        </p>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/known-by-another-name"
            onClick={[Function]}
          >
            Tell us more about you
          </a>
          <span
            className="status-completed"
          >
            Completed
          </span>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/are-you-employed"
            onClick={[Function]}
          >
            Your employment details
          </a>
          <span
            className="status-not-completed"
          >
            Not completed
          </span>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/languages-spoken-in-your-home"
            onClick={[Function]}
          >
            Tell us about the languages that are spoken in your home
          </a>
          <span
            className="status-completed"
          >
            Completed
          </span>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/your-partnership-status"
            onClick={[Function]}
          >
            Your partnership status
          </a>
          <span
            className="status-completed"
          >
            Completed
          </span>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/your-fostering-history"
            onClick={[Function]}
          >
            Your fostering history
          </a>
          <span
            className="status-not-completed"
          >
            Not completed
          </span>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/about-your-health"
            onClick={[Function]}
          >
            Your health
          </a>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/your-interest-in-fostering"
            onClick={[Function]}
          >
            Tell us about your interest in fostering
          </a>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/your-household"
            onClick={[Function]}
          >
            Your household
          </a>
        </div>
        <div
          className="anchor-with-status"
        >
          <a
            href="/fostering/children-under-sixteen-living-away"
            onClick={[Function]}
          >
            Children living away from your home
          </a>
        </div>
      </div>
    </li>
    <li
      className="disabled"
    >
      <div
        className="task-item"
      >
        <div
          className="task-item-heading"
        >
          <h2>
            Home visit
          </h2>
        </div>
        <p>
          Your home visit appointment will be on
          <strong>
             
            25/07/2190
          </strong>
           at 
          <strong>
            13:10
          </strong>
        </p>
        <p>
          Your social worker will come to your home to find out more about you and your reasons for wanting to become a foster carer. If you’ve answered the questions in section 3, you’ll talk more about them. 
        </p>
        <hr />
      </div>
    </li>
    <li
      className="disabled"
    >
      <div
        className="task-item"
      >
        <div
          className="task-item-heading"
        >
          <span
            className="status-cant-start"
          >
            Can't start yet
          </span>
          <h2>
            Additional information
          </h2>
        </div>
        <p>
          After your home visit, you must give us more information so that we can carry out personal checks and contact your referees.
        </p>
        <div
          className="anchor-with-status"
        >
          <p>
            Address history
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Your GP details
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Personal references
          </p>
        </div>
        <div
          className="anchor-with-status"
        >
          <p>
            Personal relationships with local councillors or council employees
          </p>
        </div>
      </div>
    </li>
    <li
      className="disabled"
    >
      <div
        className="task-item"
      >
        <div
          className="task-item-heading"
        >
          <h2>
            Next steps
          </h2>
        </div>
        <p>
          The fostering team will use the information that you’ve provided to carry out statutory checks and request personal and health references from your referees and GP.
        </p>
        <p>
          You’ll complete the assessment stage of your fostering journey where you’ll:
        </p>
        <ul>
          <li>
            attend training sessions, including the Skills to Foster course to help prepare you for becoming a foster carer
          </li>
          <li>
            have more meetings with your social worker so that they can find out more about you and your reasons for wanting to become a foster carer
          </li>
          <li>
            get to know current foster carers and other people who are starting their fostering journey
          </li>
        </ul>
        <p>
          You’ll then go to panel where a decision will be made about whether you can become a foster carer.
        </p>
      </div>
    </li>
  </ol>,
]
`;
